--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kayak",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://EnemyXXX.github.io/kayak",
   "dependencies": {
     "animate.css": "^4.1.1",
     "classnames": "^2.3.2",
@@ -16,13 +17,16 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
